@@ -1,3 +1,7 @@
+2004-06-12  Stephen F. Booth  <sbooth@gnu.org>
+
+	* cgicc.m4: Fixed erroneous comment
+
 2002-12-04  Stephen F. Booth  <sbooth@gnu.org>
 
 	* example.cpp: Removed CGICC_USE_NAMESPACES macro
